--- a/gateway/readme.adoc
+++ b/gateway/readme.adoc
@@ -6,13 +6,13 @@
 |apisix
 |-- apisix
 |---- plugins
-|------ auth-dew.lua               # auth-dew插件
-|------ auth-dew                   # auth-dew插件
+|------ auth-bios.lua               # auth-bios插件
+|------ auth-bios                   # auth-bios插件
 |-- conf
-|---- config-default.yaml          # 添加auth-dew到插件
+|---- config-default.yaml          # 添加auth-bios到插件
 |-- t
 |---- plugin
-|------ auth-dew                   # auth-dew插件测试
+|------ auth-bios                   # auth-bios插件测试
 |---- certs                        # 测试使用
 |---- error_page                   # 测试使用
 |---- APISIX.pm                    # 测试使用
@@ -51,9 +51,9 @@ make stop
 ----
 export PERL5LIB=.:$PERL5LIB
 
-TEST_NGINX_BINARY=/usr/bin/openresty prove -Itest-nginx/lib -r t/plugin/auth-dew/utils.t
+TEST_NGINX_BINARY=/usr/bin/openresty prove -Itest-nginx/lib -r t/plugin/auth-bios/utils.t
 
-TEST_NGINX_BINARY=/usr/bin/openresty prove -Itest-nginx/lib -r t/plugin/auth-dew/redis.t
+TEST_NGINX_BINARY=/usr/bin/openresty prove -Itest-nginx/lib -r t/plugin/auth-bios/redis.t
 
 ...
 ----
@@ -85,7 +85,7 @@ curl -i -X GET "http://127.0.0.1:9080/cache/1"
 curl "http://127.0.0.1:9080/apisix/admin/global_rules/1" -H "Content-Type: application/json" -H "X-API-KEY: edd1c9f034335f136f87ad84b625c8f1" -X PUT -d '
 {
   "plugins": {
-    "auth-dew": {
+    "auth-bios": {
       "redis_host": "127.0.0.1",
       "redis_password": "123456",
       "redis_database": 1
@@ -96,15 +96,15 @@ curl "http://127.0.0.1:9080/apisix/admin/global_rules/1" -H "Content-Type: appli
 # 获取全局插件列表
 curl http://127.0.0.1:9080/apisix/admin/global_rules -H 'X-API-KEY: edd1c9f034335f136f87ad84b625c8f1'
 
-# 测试失败，缺少 Dew-Host
+# 测试失败，缺少 BIOS-Host
 curl -i -X GET "http://127.0.0.1:9080/cache/1"
 # 测试成功
-curl -i -X GET "http://127.0.0.1:9080/cache/1" -H 'Dew-Host: app1.tenant1'
+curl -i -X GET "http://127.0.0.1:9080/cache/1" -H 'BIOS-Host: app1.tenant1'
 
 # 测试失败，Token错误
-curl -i -X GET "http://127.0.0.1:9080/cache/1" -H 'Dew-Host: app1.tenant1' -H 'Dew-Token: token001'
+curl -i -X GET "http://127.0.0.1:9080/cache/1" -H 'BIOS-Host: app1.tenant1' -H 'BIOS-Token: token001'
 # 测试成功（先执行单元测试）
-curl -i -X GET "http://127.0.0.1:9080/cache/1" -H 'Dew-Host: app1.tenant1' -H 'Dew-Token: tokenxxx'
+curl -i -X GET "http://127.0.0.1:9080/cache/1" -H 'BIOS-Host: app1.tenant1' -H 'BIOS-Token: tokenxxx'
 ----
 
 ==== 手工发布镜像
