--- a/solutions/service-governance/readme.adoc
+++ b/solutions/service-governance/readme.adoc
@@ -174,8 +174,8 @@ helm repo add kiwigrid https://kiwigrid.github.io
 # · 若要启用Prometheus进行监控Fluentd，
 #    需要先将Fluentd通过设置service暴露出来，然后设置prometheusRule和serviceMonitor。
 #    此配置需结合Prometheus-operator使用。
-helm install kiwigrid/fluentd-elasticsearch --name dew-fluentd-es --namespace devops --version=3.0.0 \
-    --set elasticsearch.host=dew-elasticsearch-master \
+helm install kiwigrid/fluentd-elasticsearch --name bios-fluentd-es --namespace devops --version=3.0.0 \
+    --set elasticsearch.host=bios-elasticsearch-master \
     --set elasticsearch.port=9200 \
     --set elasticsearch.logstash_prefix=logstash \
     --set service.type=ClusterIP \
@@ -184,9 +184,9 @@ helm install kiwigrid/fluentd-elasticsearch --name dew-fluentd-es --namespace de
     --set prometheusRule.enabled=true \
     --set prometheusRule.prometheusNamespace=devops \
     --set prometheusRule.labels.app=prometheus-operator \
-    --set prometheusRule.labels.release=dew-prometheus-operator \
+    --set prometheusRule.labels.release=bios-prometheus-operator \
     --set serviceMonitor.enabled=true \
-    --set serviceMonitor.labels.release=dew-prometheus-operator \
+    --set serviceMonitor.labels.release=bios-prometheus-operator \
     --set configMaps.useDefaults.outputConf=true \
     --set configMaps.useDefaults.containersInputConf=true \
     --set configMaps.useDefaults.systemConf=false \
