--- a/gateway/readme.adoc
+++ b/gateway/readme.adoc
@@ -74,7 +74,7 @@ curl "http://127.0.0.1:9080/apisix/admin/upstreams/1" -H "X-API-KEY: edd1c9f0343
 # 添加route
 curl "http://127.0.0.1:9080/apisix/admin/routes/1" -H "X-API-KEY: edd1c9f034335f136f87ad84b625c8f1" -X PUT -d '
 {
-  "uri": "/cache/**",
+  "uri": "/cache/*",
   "upstream_id": "1"
 }'
 
