Use the new architecture.

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -1,20 +1,4 @@
-== 开发指南
-
-``BIOS`` 基于 Apache 2.0 license 分发，如果您要向 ``BIOS`` 贡献代码或 Fork 为自己的分支项目请遵循许可证要求。
-
-SCM： https://github.com/ideal-world/bios[https://github.com/ideal-world/bios]
-
-Issues： https://github.com/ideal-world/bios/issues
-
-=== 代码要求TBD
-
-本项目使用修改版的Google CheckStyle做为代码规范，规则文件见 ``checkstyle.xml``。
-
-代码的变更需要有有对应的单元/集成测试。
-
-发起 ``Pull Request`` 后会调用 ``travis-ci`` 和 ``codacy`` 进行自动化代码检查，如有问题不会执行 ``Merge`` 。
-
-=== 环境要求TBD
+== TBD
 
 
 
