--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,18 +1,19 @@
-== 版本TBD
+== Versions
 
-=== 通道说明
+=== Channel description
 
 [IMPORTANT]
 ====
-``BIOS-Serviceless``有多个版本通道，使用时请谨慎选择：
+There are several version types of ``Tardis``, so please choose carefully when using them.
 
-. `GA` General Availability，正式版本，通过内部测试没有已知错误并且经过生产验证，生产环境首选！
-. `RC` Release Candidate，发行候选版本，通过内部测试没有已知错误，可用于生产环境。
-. `Beta` 公开测试版本，没有已知的Major类型Bug，但允许存在个别minor类型Bugs，生产环境使用需要谨慎评估！
-. `Alpha` 内部测试版本，很早期的测试版本，未经过内部测试，可能存在较多Bugs，此版本类似技术预览版（Technical Preview），切 *不可* 用于生产环境！
-. `SNAPSHOT` 快照版本，类似Nightly版本，更新频繁此不保证质量，切 *不可* 用于生产环境！
+. ``ga`` General Availability, the official version, internally tested with no known bugs and verified in production, preferred for production environments!
+. . ``rc`` Release Candidate, internally tested with no known bugs and available for production environments.
+. ``beta`` Public Beta, no known major type of bugs, but minor type of bugs are allowed, production use requires careful evaluation!
+. ``alpha`` Internal test version, very early test version, not internally tested, may have more Bugs, this version is similar to Technical Preview, must *not* be used in production environment!
+. ``snapshot`` snapshot version, similar to Nightly version, frequent updates, no quality assurance, do *not* use for production environment!
+
 ====
 
-TIP: 版本号遵循 https://semver.org/[``semver``] 规范。
+TIP: The version number follows the https://semver.org/[``semver``] specification.
 
-=== 发行记录
+=== Release Notes
