--- a/services/bios-all/readme.adoc
+++ b/services/bios-all/readme.adoc
@@ -4,5 +4,5 @@
 
 [source,sh]
 ----
-docker run --name bios-serv-all -d -p 8080:8080 -v /<path>/config:/bios/config ghcr.io/ideal-world/bios-serv-all:latest
+docker run --name bios-serv-all -d -p 8080:8080 -p 10389:10389 -v /<path>/config:/bios/config ghcr.io/ideal-world/bios-serv-all:latest
 ----
