--- a/gateway/readme.adoc
+++ b/gateway/readme.adoc
@@ -41,99 +41,10 @@ docker run -d \
 ----
 
 ===== Run with dashboard(by docker-compose)
+
 [source,sh]
 ----
-cat  << EOF > $(pwd)/dashboard.yml
-conf:
-  listen:
-    host: 0.0.0.0
-    port: 9000
-  etcd:
-    endpoints:
-      - etcd:2379
-authentication:
-  secret: biossec
-  expire_time: 3600  
-  users:
-    - username: admin
-      password: dsfDs3#￥2
-EOF
-
-cat << EOF > $(pwd)/config.yaml
-deployment:
-  role: traditional
-  role_traditional:
-    config_provider: etcd
-  admin:
-    allow_admin:
-      - 0.0.0.0/0  # Please set it to the subnet address you obtained.
-                  # If not set, by default all IP access is allowed.
-  etcd:
-    host:
-      - "http://etcd:2379"
-    prefix: "/apisix"
-    timeout: 30
-
-plugins:
-  - auth-bios
-EOF
-
-cat <<EOF > $(pwd)/docker-compose.yaml
-version: "3"
-
-services:
-  apisix-dashboard:
-    image: apache/apisix-dashboard:2.15.0-alpine
-    volumes:
-      - ./dashboard.yml:/usr/local/apisix-dashboard/conf/conf.yaml
-    restart: always
-    ports:
-      - "9000:9000"
-    networks:
-      apisix:
-
-  apisix:
-    image: ghcr.io/ideal-world/bios-gateway:latest
-    restart: always
-    volumes:
-      - ./config.yaml:/usr/local/apisix/conf/config.yaml:ro
-    ports:
-      - "9180:9180/tcp"
-      - "9080:9080/tcp"
-      - "9091:9091/tcp"
-      - "9443:9443/tcp"
-      - "9092:9092/tcp"
-    networks:
-      apisix:
-
-  etcd:
-    image: bitnami/etcd:3.4.15
-    restart: always
-    volumes:
-      - etcd_data:/bitnami/etcd
-    environment:
-      ETCD_ENABLE_V2: "true"
-      ALLOW_NONE_AUTHENTICATION: "yes"
-      ETCD_ADVERTISE_CLIENT_URLS: "http://etcd:2379"
-      ETCD_LISTEN_CLIENT_URLS: "http://0.0.0.0:2379"
-    ports:
-      - "2379:2379/tcp"
-    networks:
-      apisix:
-
-networks:
-  apisix:
-    driver: bridge
-
-volumes:
-  etcd_data:
-    driver: local
-
-EOF
-----
-start gateway
-[source,sh]
-----
+cd example/
 docker-compose up -d
 ----
 
